# gate-keeper

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  constants.py  extensions.py  main.py
app/api/: __init__.py  applications.py  auth.py  health.py  metrics_api.py  queue.py  review.py  ui.py
app/decisioning/: __init__.py  policy.py  policy.yaml
app/llm/: __init__.py  anthropic_provider.py  base.py  cache.py  mock_provider.py  prompts.py
app/models/: __init__.py  application.py  audit_log.py  decision.py  mixins.py  review.py  reviewer.py  rule_result.py
app/repository/: __init__.py  applications.py  audit.py  metrics.py
app/rules/: __init__.py  base.py  checks.py  config.py  engine.py  rules.yaml
app/schemas/: __init__.py  application.py  review.py  risk_assessment.py
app/services/: decision_service.py  review_service.py
app/telemetry/: __init__.py  metrics.py  tracing.py
app/workers/: celery_app.py  tasks.py
data/: mock_watchlist.csv  sample_applications.json
docker/: entrypoint.sh
docs/: API.md  ARCHITECTURE.md  DECISION_POLICY.md  index.html
infra/otel/: config.yaml
infra/prometheus/: prometheus.yml
migrations/: README  env.py
migrations/versions/: 0001_initial.py
scripts/: seed.py
static/: app.js  style.css
templates/: application.html  base.html  dashboard.html  queue.html
tests/: conftest.py  test_api.py  test_llm.py  test_pipeline.py  test_policy.py  test_rules.py  test_schemas.py
(+2 files in other folders)
