[project]
name = "gatekeeper"
version = "0.1.0"
description = "AI-assisted business onboarding and risk-decisioning platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "flask-limiter>=3.5",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "celery>=5.3",
    "redis>=5.0",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "gunicorn>=21.2",
    "prometheus-client>=0.20",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-flask>=0.45b0",
    "opentelemetry-instrumentation-celery>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "fakeredis>=2.21",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
